--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
     <head> <!-- Create the heading details of the page, including settings content widths and adding stylesheets -->
         <title>Home Page</title>
         <meta charset="UTF-8">
-        <meta name="viewport", content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="stylesheets.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/stylesheets.css') }}">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,24 +21,22 @@
         <div class="rb-top">
           <div class="rb-bar rb-red rb-card rb-left-align rb-large">
             <a class="rb-bar-item rb-button rb-hide-medium rb-hide-large rb-right rb-padding-large rb-hover-white rb-large rb-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-            <a href="index.html" class="rb-bar-item rb-button rb-padding-large rb-white">Home</a>
-            <a href="Interacting.html" class="rb-bar-item rb-button rb-hide-small rb-padding-large rb-hover-white">Interacting with Back-End DB's</a>
-            <a href="IntravInter.html" class="rb-bar-item rb-button rb-hide-small rb-padding-large rb-hover-white">Intranet vs. Internet</a>
-              <a href="References.html" class="rb-bar-item rb-button rb-hide-small rb-padding-large rb-hover-white">References</a>
+            <a href="/" class="rb-bar-item rb-button rb-padding-large rb-white">Home</a>
+            <a href="/second" class="rb-bar-item rb-button rb-hide-small rb-padding-large rb-hover-white">Interacting with Back-End DB's</a>
+              <a href="/third" class="rb-bar-item rb-button rb-hide-small rb-padding-large rb-hover-white">References</a>
           </div>
 
           <!-- Navbar on small screens -->
           <div id="navDemo" class="rb-bar-block rb-white rb-hide rb-hide-large rb-hide-medium rb-large">
-            <a href="Interacting.html" class="rb-bar-item rb-button rb-padding-large">Interacting with Back-End DB's</a>
-            <a href="IntravInter.html" class="rb-bar-item rb-button rb-padding-large">Intranet vs. Internet</a>
-              <a href="References.html" class="rb-bar-item rb-button rb-padding-large">References</a>
+            <a href="/second" class="rb-bar-item rb-button rb-padding-large">Interacting with Back-End DB's</a>
+              <a href="/third" class="rb-bar-item rb-button rb-padding-large">References</a>
           </div>
         </div>
 
         <!-- Header -->
         <!-- Differs from HEAD. This is a header field that shows the website overall name and my details. -->
         <header class="rb-container rb-red rb-center" style="padding:24px 4px">
-          <h1 class="rb-margin rb-jumbo">Guide to Web Apps and Databases</h1>
+          <h1 class="rb-margin rb-jumbo">Building Your Own eBook and Audiobook Web Application</h1>
           <p class="rb-xlarge">Ryan Bachman, MS587</p>
         </header>
 
@@ -47,13 +45,12 @@
         <div class="rb-row-padding rb-padding-64 rb-container">
           <div class="rb-content">
             <div class="rb-twothird">
-              <h1>What is a Web Application?</h1>
+              <h1>What is this website?</h1>
 
-              <p class="rb-text-grey">A web application, or web app, is a program that is placed on a server
-                  that will interface with a browser. This will allow users to use complex programs right on
-                  their internet browser that won't need to be coded in HTML or JavaScript directly. This is
-                  most used by websites who need to leverage things like web mail, databases, complex calculators
-                  and uses in the eCommerce sector.
+              <p class="rb-text-grey">This is a web application that I've created for MS587, Databases and Web Development at the
+                  University of Advancing Technology. The purpose of this application is to create a Web Application that will
+                  store books that a user can read and incorporate text-to-speech to make a primitive audiobook. The user will
+                  be able to choose which books they want to read and go from there.
               </p>
                 <p class="rb-text-grey">A benefit of web applications is that since they're hosted online, they do not need to be
                 downloaded like a traditional app. Users will be able to interface with your program fully from
@@ -62,7 +59,7 @@
             </div>
 
             <div class="rb-third rb-center">
-              <img src="image_fx_picture_of_a_man_shopping_online_using_a_com.jpg" alt="Man shopping online, cartoon style" width="300" height="300">
+              <img src="/static/image/HomePageImageGuyReadingBookOnline.jpg" alt="Man shopping online, cartoon style" width="300" height="300">
                 <imgTxt>This image was generated by AI using Google ImageFX</imgTxt>
             </div>
           </div>
@@ -73,7 +70,7 @@
         <div class="rb-row-padding rb-light-grey rb-padding-64 rb-container">
           <div class="rb-content">
             <div class="rb-third rb-center">
-              <img src="image_fx_databases_technology_user_data_cartoon_sty.jpg" alt="Kid working on computer near servers, cartoon style" width="300" height="300">
+              <img src="/static/image/HomePageImageManReadingGenres.jpg" alt="Kid working on computer near servers, cartoon style" width="300" height="300">
                 <imgTxt>This image was generated by AI using Google ImageFX</imgTxt>
             </div>
 
