--- a/templates/References.html
+++ b/templates/References.html
@@ -7,7 +7,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head> <!-- Create the heading details of the page, including settings content widths and adding stylesheets -->
-        <title>Home Page</title>
+        <title>Reference Page</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="{{ url_for('static', filename='css/stylesheets.css') }}">
@@ -22,13 +22,13 @@
           <div class="rb-bar rb-red rb-card rb-left-align rb-large">
             <a class="rb-bar-item rb-button rb-hide-medium rb-hide-large rb-right rb-padding-large rb-hover-white rb-large rb-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
             <a href="/" class="rb-bar-item rb-button rb-hide-small rb-padding-large rb-hover-white">Home</a>
-            <a href="/second" class="rb-bar-item rb-button rb-hide-small rb-padding-large rb-hover-white">Interacting with Back-End DB's</a>
+            <a href="/second" class="rb-bar-item rb-button rb-hide-small rb-padding-large rb-hover-white">Book Catalogue</a>
               <a href="/third" class="rb-bar-item rb-button rb-padding-large rb-white">References</a>
           </div>
 
           <!-- Navbar on small screens -->
           <div id="navDemo" class="rb-bar-block rb-white rb-hide rb-hide-large rb-hide-medium rb-large">
-            <a href="/second" class="rb-bar-item rb-button rb-padding-large">Interacting with Back-End DB's</a>
+            <a href="/second" class="rb-bar-item rb-button rb-padding-large">Book Catalogue</a>
               <a href="/third" class="rb-bar-item rb-button rb-padding-large">References</a>
           </div>
         </div>
