--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
         <!-- Creates the navigation bar. This will change colors dependent on the page the user has selected. -->
         <div class="rb-top">
           <div class="rb-bar rb-red rb-card rb-left-align rb-large">
-            <a class="rb-bar-item rb-button rb-hide-medium rb-hide-large rb-right rb-padding-large rb-hover-white rb-large rb-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+            <a class="rb-bar-item rb-button rb-hide-medium rb-hide-large rb-right rb-padding-large rb-hover-white rb-large rb-red" href="javascript:void(0);" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
             <a href="/" class="rb-bar-item rb-button rb-padding-large rb-white">Home</a>
             <a href="/second" class="rb-bar-item rb-button rb-hide-small rb-padding-large rb-hover-white">Book Catalogue</a>
               <a href="/third" class="rb-bar-item rb-button rb-hide-small rb-padding-large rb-hover-white">References</a>
