--- a/templates/download.html
+++ b/templates/download.html
@@ -45,6 +45,7 @@
         <!-- Uses a grid format so that the image can be on the right and the text can be on the left. -->
         <div class="rb-row-padding rb-padding-64 rb-container">
           <div class="rb-content">
+              <!-- Lets the user know that the book has been downloaded and to check their download folder. -->
              <h3>Your book has been downloaded! Please check your downloads folder for the .txt file.</h3>
           </div>
         </div>
